# myllm-connect

./: .gitignore  PAIRING_PROTOCOL.md  README.md  SPEC.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_DECISIONS.md  MACOS_IMPLEMENTATION.md
handrun/: README.md  auth_proxy.py  make_qr.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make_icon.py
src-tauri/src/: lib.rs  main.rs  ollama.rs  pairing.rs  proxy.rs  tailscale.rs
ui/: index.html  main.js
