[package]
name = "myllm-connect"
version = "0.1.0"
description = "MyLLM Connect — run a private AI backend on your computer and pair your iPhone to it"
authors = ["Opticell Limited"]
license = "Apache-2.0"
repository = "https://github.com/TeamDzX/myllm-connect"
edition = "2021"

[lib]
name = "myllm_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
